# skeleton-py-django-rest

./: .gitignore  Makefile  README.md  dev.env  docker-compose.yml  manage.py  pyproject.toml  sonar-project.properties
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: sonarqube-scanner.yaml
api/: urls.py
api/application/: ping_service.py
api/infrastructure/: ping_view.py
api/tests/application/: test_ping_service.py
api/tests/infrastructure/: test_ping_view.py
app/: settings.py  urls.py
docker/: Dockerfile
